Fix app width so there's no horizontal scrollbar

--- a/app/assets/stylesheets/interapptive.css.less
+++ b/app/assets/stylesheets/interapptive.css.less
@@ -39,7 +39,6 @@ html, body{
 .content {
   background-color: #eee;
   padding: 20px;
-  margin: 0 -20px;
   -webkit-border-radius: 0 0 6px 6px;
   -moz-border-radius: 0 0 6px 6px;
   border-radius: 0 0 6px 6px;
